Add python3.10 and entropoint

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 # Default environment variables for Docker Compose file
 REPO=roboe_gpu
 ROS_DISTRO=noetic
+WORKDIR=catkin_ws
+PYTHON_VERSION=python3.8
