--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ REPO=roboe_gpu
 ROS_DISTRO=noetic
 WORKDIR=catkin_ws
 PYTHON_VERSION=python3.8
+
+# Docker Hub repository settings
+HUB_REPO=roboetech
+VER=1.0
