--- a/script/.env
+++ b/script/.env
@@ -8,4 +8,4 @@ IMAGE=base-gpu-dev
 VER=1.0
 
 # environment variables for Docker container
-CONTAINER=container-base-gpu-dev
+CONTAINER=container-${IMAGE}
