--- a/script/.env
+++ b/script/.env
@@ -1,10 +1,10 @@
 # Default environment variables for working directory
-REPO=roboe_gpu
+REPO=roboe
 WORKDIR=catkin_ws
 
 # environment variables for Docker image and container
 HUB_REPO=roboetech
-IMAGE=base-gpu-dev
+IMAGE=base-cpu-dev
 VER=1.0
 
 # environment variables for Docker container
