--- a/script/.env
+++ b/script/.env
@@ -4,7 +4,7 @@ WORKDIR=catkin_ws
 
 # environment variables for Docker image and container
 HUB_REPO=roboetech
-IMAGE=base-cpu-dev
+IMAGE=base-gpu-dev
 VER=1.0
 
 # environment variables for Docker container
