--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -197,4 +197,5 @@ RUN curl -L https://npmjs.com/install.sh | bash
 COPY ./.vscode /opt/.vscode
 
 # Change base prompt terminal color
-RUN echo 'PS1="\[\033[1;36m\]\u\[\033[1;31m\][D]\[\033[1;32m\]$CONTAINER_NAME:\[\033[1;35m\]\w\[\033[1;31m\]\$\[\033[0m\] "' >> /home/${USERNAME}/.bashrc
+RUN echo 'PS1="[\033[1;36m\]\u\[\033[1;31m\][D]\[\033[1;32m\]$CONTAINER:\[\033[1;35m\]\w\[\033[1;31m\]\$\[\033[0m\] "' >> /home/${USERNAME}/.bashrc
+
