--- a/script/Dockerfile
+++ b/script/Dockerfile
@@ -7,6 +7,7 @@ ARG USERNAME
 ARG UID=1000
 ARG GID=1000
 ARG WORKDIR=catkin_ws
+ENV PATH="${PATH}:/home/${USERNAME}/.local/bin"
 
 # Create new user and home directory
 RUN groupadd --gid $GID $USERNAME \
@@ -31,37 +32,47 @@ RUN /bin/bash -c "virtualenv vdx311 --python=python3.11" && \
     echo 'fi' >> ~/.bashrc && \
     echo "deactivate"
 
-# Environment Setup
-RUN echo "source /opt/ros/noetic/setup.bash" >> ~/.bashrc
 
 ### VISION ###
 # Install Ensenso SDK & Ueye driver
-RUN mkdir ~/catkin_ws/dev/Ensenso && \
-    cd ~/catkin_ws/dev/Ensenso && \
-    wget -O ensenso-sdk-3.6.1617-x64.deb https://download.optonic.com/s/ensensosdk/download?files=ensenso-sdk-3.6.1617-x64.deb && \
-    wget -O ids-software-suite-linux-64-4.96.1-archive.tgz https://download.ensenso.com/s/idsdrivers/download?files=ids-software-suite-linux-64-4.96.1-archive.tgz && \
-    tar xvfz ids-software-suite-linux-64-4.96.1-archive.tgz && \
-    sudo dpkg -i ensenso-sdk-3.6.1617-x64.deb
-USER root
-RUN chmod +x ~/catkin_ws/dev/Ensenso/ueye_4.96.1.2054_amd64.run && \
-    echo y | ~/catkin_ws/dev/Ensenso/ueye_4.96.1.2054_amd64.run
+# RUN mkdir ~/catkin_ws/dev/Ensenso && \
+#     cd ~/catkin_ws/dev/Ensenso && \
+#     wget -O ensenso-sdk-3.6.1617-x64.deb https://download.optonic.com/s/ensensosdk/download?files=ensenso-sdk-3.6.1617-x64.deb && \
+#     wget -O ids-software-suite-linux-64-4.96.1-archive.tgz https://download.ensenso.com/s/idsdrivers/download?files=ids-software-suite-linux-64-4.96.1-archive.tgz && \
+#     tar xvfz ids-software-suite-linux-64-4.96.1-archive.tgz && \
+#     sudo dpkg -i ensenso-sdk-3.6.1617-x64.deb
+# USER root
+# RUN chmod +x ~/catkin_ws/dev/Ensenso/ueye_4.96.1.2054_amd64.run && \
+#     echo y | ~/catkin_ws/dev/Ensenso/ueye_4.96.1.2054_amd64.run
 
-RUN echo "export ENSENSO_INSTALL=/opt/ensenso" >> ~/.bashrc && \
-    /bin/bash -c 'source ~/.bashrc'
+# RUN echo "export ENSENSO_INSTALL=/opt/ensenso" >> ~/.bashrc && \
+#     /bin/bash -c 'source ~/.bashrc'
 
 # Install Zivid driver
-RUN mkdir -p ~/catkin_ws/dev/Zivid && \
-    cd ~/catkin_ws/dev/Zivid && \
-    wget \
-    https://downloads.zivid.com/sdk/releases/2.10.0+8ce7dae3-2/u20/zivid-telicam-driver_3.0.1.1-3_amd64.deb \
-    https://downloads.zivid.com/sdk/releases/2.10.0+8ce7dae3-2/u20/zivid_2.10.0+8ce7dae3-2_amd64.deb \
-    https://downloads.zivid.com/sdk/releases/2.10.0+8ce7dae3-2/u20/zivid-studio_2.10.0+8ce7dae3-2_amd64.deb \
-    https://downloads.zivid.com/sdk/releases/2.10.0+8ce7dae3-2/u20/zivid-tools_2.10.0+8ce7dae3-2_amd64.deb && \
-    sudo apt install ./*.deb && \
-    pip install zivid==2.10.0.2.10.0
-WORKDIR ~/catkin_ws/src/vision/zivid-ros/SRC/python_zivid/zivid-python
-RUN pip install .
+# RUN mkdir -p ~/catkin_ws/dev/Zivid && \
+#     cd ~/catkin_ws/dev/Zivid && \
+#     wget \
+#     https://downloads.zivid.com/sdk/releases/2.10.0+8ce7dae3-2/u20/zivid-telicam-driver_3.0.1.1-3_amd64.deb \
+#     https://downloads.zivid.com/sdk/releases/2.10.0+8ce7dae3-2/u20/zivid_2.10.0+8ce7dae3-2_amd64.deb \
+#     https://downloads.zivid.com/sdk/releases/2.10.0+8ce7dae3-2/u20/zivid-studio_2.10.0+8ce7dae3-2_amd64.deb \
+#     https://downloads.zivid.com/sdk/releases/2.10.0+8ce7dae3-2/u20/zivid-tools_2.10.0+8ce7dae3-2_amd64.deb && \
+#     sudo apt install ./*.deb && \
+#     pip install zivid==2.10.0.2.10.0
+# WORKDIR ~/catkin_ws/src/vision/zivid-ros/SRC/python_zivid/zivid-python
+# RUN pip install .
 
+RUN /home/${USERNAME}/vdx311/bin/pip install catkin_pkg \
+    numpy==1.23.5 pandas==2.0.3 \
+    opencv-python==4.6.0.66 \
+    hpp-fcl \
+    pinocchio \
+    rospkg \
+    PyYAML \
+    jupyter \
+    setproctitle \
+    tomli==2.0.1 && \
+    /home/${USERNAME}/vdx311/bin/pip install --upgrade setuptools
+COPY ./requirements.txt /home/${USERNAME}/catkin_ws/
 RUN echo -e "source /entrypoint.sh\n\source /opt/.nvm/nvm.sh" >> /home/${USERNAME}/.bashrc
 
 # Change base prompt terminal color
